samples/_failures_safe/1761074466_76d8b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_931d9898.c: In function ‘main’:
./samples/SAFE/__tmp_931d9898.c:170:9: error: expected declaration or statement at end of input
  170 |         }
      |         ^
./samples/SAFE/__tmp_931d9898.c:170:9: error: expected declaration or statement at end of input
